tests/neg/i24375.scala
def foo(f: (x: Int) ?=> Int) = f(using 0)
@main def Main = println(foo(x))